# image_stitcher

./: CMakeLists.txt  README.md
prj.core/: CMakeLists.txt
prj.core/feature_processor/: CMakeLists.txt  feature_processor.h
prj.core/feature_processor/demo/: feature_processor_demo.cpp
prj.core/feature_processor/src/: feature_processor.cpp
